--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to Home Page!</h1>
-    <a href="/my-project2/public/page1/index.html">Go To Page 1</a>
+    <a href="/page1/">Go To Page 1</a>
 </body>
 </html>
