--- a/public/page1/index.html
+++ b/public/page1/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to Page 1!</h1>
-    <a href="/my-project2/public/index.html">Go To Back</a>
+    <a href="/public/">Go To Back</a>
 </body>
 </html>
